# Web-scraping-Truck

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.example.yaml
scripts/: run_scraper.py
src/: __init__.py  config.py  scraper.py
tests/: test_smoke.py
truck_project/: README.md  requirements.txt
truck_project/scripts/: clean_trucks.py  dashboard.py  scrape_trucks.py
